2003-12-31  Henning Meier-Geinitz <henning@meier-geinitz.de>
	
	* doc/descriptions/unsupported.desc: Added HP and Epson scanners.

2003-12-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/check-usb-chip.c: Added test for Genesys Logic GL841.

2003-12-27  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Updated/added several Medion
	  scanners.
	* backend/as6e.c backend/coolscan.c backend/dll.c backend/ibm.c
	  backend/microtek2.c backend/mustek_scsi_pp.c
	  backend/mustek_usb_high.c backend/mustek_usb_low.c
	  backend/mustek_usb_mid.c backend/nec.c backend/net.c
	  backend/qcam.c backend/ricoh-scsi.c backend/s9036.c
	  backend/sp15c-scsi.h backend/sp15c.c backend/sp15c.h
	  backend/st400.c backend/tamarack.c backend/tamarack.h
	  sanei/sanei_scsi.c tools/check-usb-chip.c: Silenced some
	  compilation warnings.

2003-12-26  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* README.darwin: Mentioned libusb problems. Updated fork section.

2003-12-25  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/niash.desc: Added information that
	  this backend will be included soon. Fixed "Snapscan" to
	  "SnapScan" (bug #300394).
	* backend/mustek_scsi_pp.c backend/mustek_scsi_pp.h
	  backend/Makefile.in  backend/mustek.c
	  backend/mustek.conf backend/mustek.h doc/sane-mustek.man
	  doc/sane.man doc/descriptions/mustek.desc
	  include/sane/sanei_pa4s2.h sanei/sanei_pa4s2.c: Added support
	  for Mustek Paragon 600 II EP (SCSI-over-parallel port). This is
	  based on a patch from James Perry. Support for libiee1284 is
	  missing until now. Closes bug #300143.
	* AUTHORS: Added James Perry.
	* doc/descriptions/unsupported.desc: Removed Mustek Paragon 600 II
	  EP/ED. Added Genius Colorpage-EP.
	* README: Updated concerning libieee1284.

2003-12-23  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added more information about