@@ -150,7 +150,7 @@ usb 0x0458 0x2011
 # Autodetect Genius Colorpage Vivid4x
 usb 0x0458 0x201b
 
-# Genius Colorpage Vivid3x doesn't need any manual settings
+# Genius Colorpage Vivid4x doesn't need any manual settings
 
 ##############################################################################
 # Autodetect Genius Colorpage Vivid3xe
@@ -159,3 +159,9 @@ usb 0x0458 0x2017
 # Genius Colorpage Vivid3xe doesn't need any manual settings
 
 ##############################################################################
+# Autodetect Genius Colorpage Vivid4xe
+usb 0x0458 0x201a
+
+# Genius Colorpage Vivid4xe doesn't need any manual settings
+##############################################################################
+
