@@ -1,5 +1,5 @@
 :backend "gt68xx"
-:version "1.0-51"
+:version "1.0-52"
 :manpage "sane-gt68xx"
 :url "http://www.meier-geinitz.de/sane/gt68xx-backend/"
 :comment "Only the USB scanners mentioned below are supported. For other Mustek BearPaws, look at the Plustek and the MA-1509 backend."
@@ -59,6 +59,11 @@
 ;:comment ""
 
 :model "Colorpage Vivid4x"
+:status :basic
+:interface "USB"
+:comment "Should work but has limited testing. Please contact me if you own such a device."
+
+:model "Colorpage Vivid4xe"
 :status :basic
 :interface "USB"
 :comment "Should work but has limited testing. Please contact me if you own such a device."
