@@ -1,4 +1,4 @@
-.TH sane-gt68xx 5 "14 Dec 2003" "@PACKAGEVERSION@" "SANE Scanner Access Now Easy"
+.TH sane-gt68xx 5 "1 Jan 2004" "@PACKAGEVERSION@" "SANE Scanner Access Now Easy"
 .IX sane-gt68xx
 .SH NAME
 sane-gt68xx \- SANE backend for GT-68XX based USB flatbed scanners
@@ -26,6 +26,8 @@ Genius Colorpage Vivid3 V2
 Genius Colorpage Vivid3xe
 .br
 Genius Colorpage Vivid4x
+.br
+Genius Colorpage Vivid4xe
 .br
 Googlegear 2000
 .br
